--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,5 @@
+$mainfont: 'Bebas Neue', sans-serif;
+
 html {
 	box-sizing: border-box;
 }
@@ -5,4 +7,30 @@ html {
 body {
 	margin: 0;
 	min-height: 100vh;
+	font-family: $mainfont;
+	background-color: whitesmoke;
+}
+
+h1 {
+	text-align: center;
+	margin-top: 25px;
+	margin-bottom: 15px;
+	font-size: 40px;
+	letter-spacing: 5px;
+}
+
+.loader {
+	position: fixed;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	background: rgba(255, 255, 255, 0.8);
+
+	img {
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
 }
