--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,11 +36,73 @@ h1 {
 }
 
 .image-container {
-	margin: 10px 30%;
+	margin: 10px 10%;
 
 	img {
 		width: 100%;
-		margin-top: 5px;
+	}
+
+	.card-body {
+		margin: 10px 20% 20px 20%;
+		border-bottom: 2px solid grey;
+
+		.body-author {
+			display: flex;
+			// justify-content: space-between;
+
+			.author-photo {
+				background-color: #bbb;
+				width: 80px;
+				height: 80px;
+				border-radius: 50%;
+
+				img {
+					border-radius: 50%;
+				}
+			}
+			.author {
+				margin: 0;
+				margin-left: 10px;
+				display: flex;
+				align-items: center;
+				letter-spacing: 0.5px;
+				font-size: 25px;
+			}
+			button {
+				display: flex;
+				align-items: center;
+				font-size: 35px;
+				border: none;
+				background-color: whitesmoke;
+				margin-left: auto;
+				cursor: pointer;
+			}
+		}
+
+		.body-content {
+			margin: 0 20px;
+			font-size: 22px;
+			.icons {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+				i {
+					cursor: pointer;
+					margin: 10px 0;
+					font-size: 30px;
+					&:not(:last-child) {
+						margin-right: 20px;
+					}
+					&:last-child {
+						margin-left: auto;
+					}
+				}
+			}
+
+			.likes {
+				margin: 10px 0;
+			}
+		}
 	}
 }
 
@@ -51,6 +113,10 @@ h1 {
 		font-size: 20px;
 	}
 	.image-container {
-		margin: 10px;
+		margin: 0;
+
+		.card-body {
+			margin: 20px 0;
+		}
 	}
 }
